Dark mode autofill fix

--- a/src/components/Input/input.module.less
+++ b/src/components/Input/input.module.less
@@ -16,3 +16,7 @@
   transform: translateY(-50%);
   @apply text-slate-600 transition-all bg-transparent;
 }
+
+.autofillDark {
+  -webkit-text-fill-color: white;
+}
