--- a/src/index.less
+++ b/src/index.less
@@ -42,6 +42,6 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   border: none;
   -webkit-text-fill-color: none;
-  // -webkit-box-shadow: 0 0 0px 1000px #00000000 inset;
+  color: white;
   transition: background-color 5000s ease-in-out 0s;
 }
